--- a/notes/1.md
+++ b/notes/1.md
@@ -83,4 +83,26 @@ vue create admin
 
 - 在views目录下创建Main.vue，views目录用来存放视图
 - 修改router.js, router.js 用来配置路由
-- 
+- vue文件中的html代码必须包裹在<template></template>标签中
+- <router-view></router-view> 是路由容器，加载路由加载过来的视图
+- element导航组件el-menu 需要在上面加 `router` 才具有导航的功能
+- el-menu-item的 `index` 属性是对应的路由地址
+
+#### element表单
+
+- `label-width` 加此属性表单会变为左右布局
+- `@submit.native.prevent="save"` 阻止表单默认的提交方法并调用赋予的save方法
+
+```html
+<el-form label-width="120px" @submit.native.prevent="save">
+    <el-form-item label="名称">
+    	<el-input v-model="model.name"></el-input>
+    </el-form-item>
+    <el-form-item>
+    	<el-button type="primary" native-type="submit">保存</el-button>
+    </el-form-item>
+</el-form>
+```
+
+
+
